[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nodes/Node_Storage.tscn" type="PackedScene" id=1]
[ext_resource path="res://Nodes/Miner.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/Shop.gd" type="Script" id=3]
[ext_resource path="res://game/game.gd" type="Script" id=4]
[ext_resource path="res://game/Generate.gd" type="Script" id=5]
[ext_resource path="res://game/Graph.gd" type="Script" id=6]
[ext_resource path="res://game/Items.gd" type="Script" id=8]

[sub_resource type="OpenSimplexNoise" id=1]

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 512, 512 )

[node name="Camera2D" type="Camera2D"]
current = true
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = -511.0
margin_top = -300.0
margin_right = 511.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="Panel"]
margin_right = 511.0
margin_bottom = 600.0
right_disconnects = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Miner" parent="Panel/GraphEdit" instance=ExtResource( 2 )]
margin_left = 100.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 160.0
mouse_filter = 1
offset = Vector2( 100, 100 )

[node name="Storage" parent="Panel/GraphEdit" instance=ExtResource( 1 )]
margin_left = 50.0
margin_top = 200.0
margin_right = 282.0
margin_bottom = 265.0
mouse_filter = 1
offset = Vector2( 50, 200 )

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_left = 722.0
margin_top = 50.0
margin_right = 789.0
margin_bottom = 114.0
color = Color( 0.713726, 0.235294, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ColorRect"]
margin_left = 8.0
margin_top = 5.0
margin_right = 64.0
margin_bottom = 55.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ColorRect/VBoxContainer"]
margin_right = 56.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.231373, 0.231373, 0.231373, 1 )
text = "Steel:0"

[node name="Label2" type="Label" parent="Panel/ColorRect/VBoxContainer"]
margin_top = 18.0
margin_right = 56.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coal:0"

[node name="Label3" type="Label" parent="Panel/ColorRect/VBoxContainer"]
margin_top = 36.0
margin_right = 56.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.560784, 0.8, 0.894118, 1 )
text = "Bluet:0"

[node name="Shop" type="AcceptDialog" parent="Panel"]
margin_right = 292.0
margin_bottom = 123.0
window_title = "Shop"
resizable = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Shop"]
margin_left = 8.0
margin_top = 8.0
margin_right = 284.0
margin_bottom = 87.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Shop/VBoxContainer"]
margin_right = 276.0
margin_bottom = 14.0
text = "Press ok to close"

[node name="Label2" type="Label" parent="Panel/Shop/VBoxContainer"]
margin_top = 18.0
margin_right = 276.0
margin_bottom = 32.0
text = "Miner = 10 steel 1 coal"

[node name="Button" type="Button" parent="Panel"]
margin_left = 678.816
margin_top = 187.782
margin_right = 838.816
margin_bottom = 227.782
text = "Shop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel"]
margin_left = 639.0
margin_top = 258.0
margin_right = 900.0
margin_bottom = 564.0

[node name="ItemList" type="ItemList" parent="Panel/ColorRect2"]
margin_left = 46.0
margin_top = 60.0
margin_right = 207.0
margin_bottom = 278.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/ColorRect2"]
margin_left = 94.4915
margin_top = 24.3346
margin_right = 148.492
margin_bottom = 38.3346
custom_colors/font_color = Color( 0.756863, 0.721569, 0.180392, 1 )
text = "Nodes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" type="Popup" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Panel/Popup"]
margin_right = 220.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Popup/ColorRect"]
margin_right = 215.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You don't have enough resoruces!"
[connection signal="connection_request" from="Panel/GraphEdit" to="Panel/GraphEdit" method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="Panel/GraphEdit" to="Panel/GraphEdit" method="_on_GraphEdit_disconnection_request"]
[connection signal="custom_action" from="Panel/Shop" to="." method="_on_Shop_custom_action"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
